--- a/quotes-app/src/index.css
+++ b/quotes-app/src/index.css
@@ -3,11 +3,21 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+    margin:0px;
+    padding:0px 40px;
+    background-repeat: no-repeat;
+    background-size: cover; 
+    /* border:1px solid white; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+   height: 100vh;
+  overflow: hidden;
+ 
+  background-image: url("https://cdn.quotesgram.com/img/79/49/825791626-empty-city-street-18256.png");
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas,poppins, 'Courier New',
     monospace;
 }
+
